<resources>
    <!-- Stucafe Locations-->
    <string-array name="Autoren">
        <item>Baur Matthias</item>
        <item>Koch Andreas</item>
        <item>Reitenhardt  Matthias</item>
        <item>Uth Philipp</item>
    </string-array>
    <string name="Impressum">%s wurde erstellt von:\n\n%s\n%s\n%s\n%s</string>
    <!-- K6 Locations-->

    <string name="app_name">Masterappus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_headerText">Geomatik 2018</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_Home">Home</string>
    <string name="nav_PcRooms">PC-Räume</string>
    <string name="nav_Classroom">Hörsäle</string>
    <string name="nav_Library">Bibliothek</string>
    <string name="nav_Food">Verpflegung</string>
    <string name="nav_Mvv">MVV-MVG</string>
    <string name="nav_Fun">Nightlife</string>
    <string name="nav_GoogleMaps">Google Maps</string>
    <string name="nav_Imperssum">Impressum</string>

    <string name="SQLite_TimeFormat">EEEE dd.MMMM yy HH:MM</string>

    <!-- Food Text-->
    <string name="nav_McDonalds">McDonalds</string>
    <integer name="food_k6">2</integer>
    <!-- Food Button Text-->
    <string name="Food_StuCafe">Stu-Cafe</string>
    <string name="Food_K6">K 6</string>
    <string name="Food_BK">Burger King</string>
    <string name="Food_MCD">Mc Donalds</string>
    <string name="Food_Subway">Subway</string>
    <string name="Food_losteria">L\'Osteria</string>

    <!-- Actionbar Text -->
    <string name="actionText_HomeText">Wo willst du hin?</string>

    <!-- Tab Names -->
    <string name="tabList">Freie Räume</string>
    <string name="tabMap">Überischtskarte</string>

    <!-- HM Map Button Text-->
    <string name="radioUG">UG</string>
    <string name="radioEG">EG</string>
    <string name="radio1OG">OG-1</string>
    <string name="radio2OG">OG-2</string>
    <string name="radio3OG">OG-3</string>
    <string name="radio4OG">OG-4</string>

    <!-- DB Datenbank Parameter -->
    <integer name="KindPcRoom">1</integer>
    <integer name="KindClassRoom">2</integer>

    <integer name="WeekDay_Monday">1</integer>
    <integer name="WeekDay_Tuesday">2</integer>
    <integer name="WeekDay_Wednesday">3</integer>
    <integer name="WeekDay_Thursday">4</integer>
    <integer name="WeekDay_Friday">5</integer>

    <!-- List entries -->
    <string name="entry_duration_std_min">Noch %d Std %d Min frei</string>
    <string name="entry_duration_min">Noch %d Min frei</string>
    <string name="entry_duration_std_min_future">In %d Std %d Min frei</string>
    <string name="entry_duration_min_future">In %d Min frei</string>
    <string name="entry_time_free">Bis %s Uhr frei</string>
    <string name="entry_time_future">Ab %s Uhr bis %s Uhr frei</string>
    <string name="entry_duration_string_noMoreEvents">Rest des Tages frei</string>
    <string name="entry_time_string_noMoreEvents">...</string>
    <string name="time_string_now">%1$d%2$d</string>

    <!-- PcRooms -->
    <string name="Room_DV6">dv6</string>
    <string name="Room_DV7">dv7</string>
    <string name="Room_DV8">dv8</string>
    <!-- Classrooms -->
    <string name="Room_HS21">HS21</string>
    <string name="Room_HS115">HS115</string>
    <string name="Room_HS222">HS222</string>


    <!-- Nightlife activity-->
    <string name="title_activity_nightlife">Map</string>
    <string name="title_activity__food__mcd">Map</string>
    <string name="title_activity__food__k6">Map</string>
    <string name="title_activity__food__stu_cafe">Map</string>
    <string name="title_activity__food__bk">Map</string>
    <string name="title_activity__food__sub_way">Map</string>
    <string name="title_activity__food__losteria">Map</string>
    <string name="title_activity_maps_activityasd">Map</string>


    <!-- Warning if GPS is deaktivatet-->
    <string name="GPSDeaktivated">"GPS ausgeschaltet. Standort kann nicht Angezeigt werden!</string>

    <!-- HM Locations-->
    <string-array name="location_HM">
        <item>Hochschule München FK 08</item>
        <item>48.142659</item>
        <item>11.568068</item>
    </string-array>

    <!-- Nigthlife Locations-->
    <string-array name="location_SweetClub">
        <item>Sweet Club</item>
        <item>48.1424805</item>
        <item>11.5704762</item>
    </string-array>

    <!-- Food Locations-->
    <!-- Stucafe Locations-->
    <string-array name="location_StuCafe">
        <item>Stu Cafe</item>
        <item>48.1427996</item>
        <item>11.5682816</item>
    </string-array>
    <!-- K6 Locations-->
    <string-array name="location_K6">
        <item>K6</item>
        <item>48.1428809</item>
        <item>11.5677528</item>
    </string-array>
    <!-- Burger King Locations-->
    <string-array name="location_BK">
        <item>Burger King</item>
        <item>48.1393619</item>
        <item>11.5611286</item>
    </string-array>
    <!-- MC Donalds Locations-->
    <string-array name="location_Mc_Donalds">
        <item>Mc Donalds</item>
        <item>48.1388774</item>
        <item>11.5642336</item>
    </string-array>
    <!-- Subway Locations-->
    <string-array name="location_Subway">
        <item>Subway</item>
        <item>48.1405645</item>
        <item>11.562416</item>
    </string-array>
    <!-- L'Osteria Locations-->
    <string-array name="location_LOsteria">
        <item>L\'Osteria</item>
        <item>48.1402136</item>
        <item>11.5655253</item>
    </string-array>

</resources>
