<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/imageHmMap"
        android:layout_width="0dp"
        android:layout_height="424dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/RadioGroupHmMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroupHmMap"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHmMap">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground">

            <RelativeLayout
                android:id="@+id/radioUGLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radioEGLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/radioUG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/radionUGText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioUG"
                    android:layout_centerHorizontal="true"
                    android:text="@string/radioUG" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/radioEGLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radioOG1Layout"
                app:layout_constraintStart_toEndOf="@+id/radioUGLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/radioEG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="true" />

                <TextView
                    android:id="@+id/radioUGText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioEG"
                    android:layout_centerHorizontal="true"
                    android:text="@string/radioEG" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/radioOG1Layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radioOG2Layout"
                app:layout_constraintStart_toEndOf="@+id/radioEGLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/radioOG1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/radioOG1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioOG1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/radio1OG" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/radioOG2Layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radioOG3Layout"
                app:layout_constraintStart_toEndOf="@+id/radioOG1Layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <RadioButton
                    android:id="@+id/radioOG2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/radioOG2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioOG2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/radio2OG" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/radioOG3Layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radioOG4Layout"
                app:layout_constraintStart_toEndOf="@+id/radioOG2Layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <RadioButton
                    android:id="@+id/radioOG3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/radioOG3Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioOG3"
                    android:layout_centerHorizontal="true"
                    android:text="@string/radio3OG" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/radioOG4Layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioOG3Layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/radioOG4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/radioOG4Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioOG4"
                    android:layout_centerHorizontal="true"
                    android:text="@string/radio4OG" />

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>